@@ -1,3 +1,6 @@
+import org.hibernate.orm.jakarta.JakartaDirectoryTransformation
+import org.hibernate.orm.jakarta.JakartaJarTransformation
+
 /*
  * Hibernate, Relational Persistence for Idiomatic Java
  *
@@ -7,11 +10,10 @@
 
 description = 'Support for testing Hibernate ORM Jakarta functionality'
 
+
 apply from: rootProject.file( 'gradle/jakarta-java-module.gradle' )
 
-configurations {
-	jakartaeeTransformJars
-}
+evaluationDependsOn( ':hibernate-testing' )
 
 dependencies {
 	api project( ':hibernate-core-jakarta' )
@@ -37,51 +39,124 @@ dependencies {
 
 	api libraries.log4j2
 
-	jakartaeeTransformJars 'biz.aQute.bnd:biz.aQute.bnd.transform:5.1.1',
-			'commons-cli:commons-cli:1.4',
-			'org.slf4j:slf4j-simple:1.7.30',
-			'org.slf4j:slf4j-api:1.7.26',
-			'org.eclipse.transformer:org.eclipse.transformer:0.2.0',
-			'org.eclipse.transformer:org.eclipse.transformer.cli:0.2.0'
-	testCompile fileTree(dir: 'libs', include: '*.jar')
+	implementation project( ':hibernate-transaction-client' )
+
+	testImplementation fileTree(dir: 'libs', include: '*.jar')
 }
 
-jar {
-	mustRunAfter project(':hibernate-testing').tasks.jar
-	dependsOn project(':hibernate-testing').tasks.jar
-	def baseDir = project(':hibernate-testing').buildDir
-	def baseJars = fileTree(baseDir).matching {include 'libs/*.jar' }
-	inputs.files(baseJars).skipWhenEmpty()
-	outputs.dir project.buildDir
-	doLast {
-		new File(project.buildDir, "libs").mkdirs()
-		fileTree(project.buildDir).matching { include 'libs/*.jar' }.each { delete it }
 
-		baseJars.each { bundleJar ->
-			def sourceJarPath = baseDir.path + '/libs/' + bundleJar.name
-			println 'Initial bundle jar name [ ' + sourceJarPath + ' ]'
+// ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+// main jar
 
-			def finalBundleJarName = project.buildDir.path + '/libs/' + bundleJar.name.replaceAll( 'hibernate-testing', 'hibernate-testing-jakarta' )
-			println 'Default jakarta final bundle jar name [ ' + finalBundleJarName + ' ]'
+tasks.jar {
+	enabled false
+}
 
-			def transformerArgs = [
-					sourceJarPath, finalBundleJarName,
-					'-q', // quiet output
-					'-tr', new File(getProjectDir().getParentFile(), 'rules/jakarta-renames.properties').path,
-					'-tv', new File(getProjectDir().getParentFile(), 'rules/jakarta-versions.properties').path,
-					'-td', new File(getProjectDir().getParentFile(), 'rules/jakarta-direct.properties').path,
-			]
+task jakartafyJar( type: JakartaJarTransformation ) {
+	sourceJar = project(':hibernate-testing').tasks.jar.archiveFile
+	targetJar = tasks.jar.archiveFile
+}
 
-			println 'Transformer options:'
-			transformerArgs.each {
-				println '  [ ' + it + ' ]'
-			}
+tasks.jar.dependsOn project(':hibernate-testing').tasks.jar
+tasks.jar.finalizedBy tasks.jakartafyJar
+tasks.jakartafyJar.dependsOn tasks.jar
+tasks.jakartafyJar.mustRunAfter tasks.jar
 
-			javaexec {
-				classpath configurations.jakartaeeTransformJars
-				main = 'org.eclipse.transformer.jakarta.JakartaTransformer'
-				args = transformerArgs
-			}
-		}
+
+// ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+// javadoc jar
+
+tasks.javadocJar {
+	enabled false
+}
+
+task jakartafyJavadocJar( type: JakartaJarTransformation ) {
+	sourceJar = project(':hibernate-testing').tasks.javadocJar.archiveFile
+	targetJar = tasks.javadocJar.archiveFile
+}
+
+tasks.javadocJar.dependsOn project(':hibernate-testing').tasks.javadocJar
+tasks.javadocJar.finalizedBy tasks.jakartafyJavadocJar
+tasks.jakartafyJavadocJar.dependsOn tasks.javadocJar
+tasks.jakartafyJavadocJar.mustRunAfter tasks.javadocJar
+
+
+
+// ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+// sources jar
+
+tasks.sourcesJar {
+	enabled false
+}
+
+task jakartafySourcesJar( type: JakartaJarTransformation ) {
+	sourceJar = project(':hibernate-testing').tasks.sourcesJar.archiveFile
+	targetJar = tasks.javadocJar.archiveFile
+}
+
+tasks.sourcesJar.dependsOn project(':hibernate-testing').tasks.sourcesJar
+tasks.sourcesJar.finalizedBy tasks.jakartafySourcesJar
+tasks.jakartafySourcesJar.dependsOn tasks.sourcesJar
+tasks.jakartafySourcesJar.mustRunAfter tasks.sourcesJar
+
+
+
+// ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+// testing
+
+project.ext {
+	testClassesUnpackTargetDirectory = project.layout.buildDirectory.dir( 'jakarta/unpack/classes' )
+	testClassesTransformationTargetDirectory = project.layout.buildDirectory.dir( 'jakarta/test/classes' )
+}
+
+tasks.compileTestJava {
+	enabled false
+}
+
+tasks.processTestResources {
+	enabled false
+}
+
+task unpackTests(type: Copy) {
+	from zipTree( project( ':hibernate-testing' ).tasks.testJar.archiveFile )
+	into project.testClassesUnpackTargetDirectory
+}
+
+task jakartafyTests(type: JakartaDirectoryTransformation) {
+	sourceDirectory = project.testClassesUnpackTargetDirectory
+	targetDirectory = project.testClassesTransformationTargetDirectory
+}
+
+
+tasks.compileTestJava.dependsOn tasks.unpackTests
+tasks.compileTestJava.finalizedBy tasks.jakartafyTests
+
+tasks.unpackTests.dependsOn project(':hibernate-testing').tasks.testJar
+
+tasks.jakartafyTests.dependsOn tasks.unpackTests
+
+tasks.test {
+	testClassesDirs += project.files( tasks.jakartafyTests.targetDirectory )
+	classpath += project.files( tasks.jakartafyTests.targetDirectory )
+
+	systemProperty 'file.encoding', 'utf-8'
+
+	if ( gradle.ext.javaVersions.test.launcher.asInt() >= 9 ) {
+		// See org.hibernate.boot.model.naming.NamingHelperTest.DefaultCharset.set
+		jvmArgs( ['--add-opens', 'java.base/java.nio.charset=ALL-UNNAMED'] )
+		// Weld needs this to generate proxies
+		jvmArgs( ['--add-opens', 'java.base/java.security=ALL-UNNAMED'] )
+		jvmArgs( ['--add-opens', 'java.base/java.lang=ALL-UNNAMED'] )
 	}
 }
+
+task testJar(type: Jar, dependsOn: testClasses) {
+	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+	archiveClassifier.set( 'test' )
+	from tasks.jakartafyTests.targetDirectory
+}
+
+artifacts {
+	tests tasks.testJar
+}
+
